--- a/index.html
+++ b/index.html
@@ -6,50 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-      integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Speed Typer</title>
+    <title>Music Player</title>
   </head>
   <body>
-    <button id="settings-btn" class="settings-btn">
-      <i class="fas fa-cog"></i>
-    </button>
+    <h1>Music Player</h1>
 
-    <div id="settings" class="settings">
-      <form id="settings-form">
-        <div>
-          <label for="difficulty">Difficulty</label>
-          <select id="difficulty">
-            <option value="easy">Easy</option>
-            <option value="medium">Medium</option>
-            <option value="hard">Hard</option>
-          </select>
+    <div class="music-container" id="music-container">
+      <div class="music-info">
+        <h4 id="title"></h4>
+        <div class="progress-container" id="progress-container">
+          <div class="progress" id="progress"></div>
         </div>
-      </form>
-    </div>
+      </div>
 
-    <div class="container">
-      <h2>👩‍💻 Speed Typer 👨‍💻</h2>
-      <small>Type the following:</small>
+      <audio src="music/ukulele.mp3" id="audio"></audio>
 
-      <h1 id="word"></h1>
-
-      <input
-        type="text"
-        id="text"
-        autocomplete="off"
-        placeholder="Type the word here..."
-        autofocus
-      />
-
-      <p class="time-container">Time left: <span id="time">10s</span></p>
-
-      <p class="score-container">Score: <span id="score">0</span></p>
-
-      <div id="end-game-container" class="end-game-container"></div>
+      <div class="img-container">
+        <img src="images/ukulele.jpg" alt="music-cover" id="cover" />
+      </div>
+      <div class="navigation">
+        <button id="prev" class="action-btn">
+          <i class="fas fa-backward"></i>
+        </button>
+        <button id="play" class="action-btn action-btn-big">
+          <i class="fas fa-play"></i>
+        </button>
+        <button id="next" class="action-btn">
+          <i class="fas fa-forward"></i>
+        </button>
+      </div>
     </div>
 
     <script src="script.js"></script>
